1999-12-27  Alexander V. Lukyanov  <lav@yars.free.net>

	* CopyJob.cc, CopyJob.h: add op member for CopyJob.
	* FileCopy.cc: add ls caching support; (FileCopyPeerDirList) new class.
	* Makefile.am: remove LsJob.cc, LsJob.h, ftpget.
	* MirrorJob.cc: supply op for CopyJob.
	* buffer.cc, buffer.h: (SaveRollback) new method; define GET_BUFSIZE.
	* commands.cc: new ls, nlist; supply op for CopyJob.
	* pgetJob.cc: supply op for CopyJob.

1999-12-26  Alexander V. Lukyanov  <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h: use GlobURL.
	* FileAccess.cc: (GetFileURL) handle file starting with '~';
	  (GlobURL::GetResult) implemented.
	* FileAccess.h: few methods for GlobURL added.
	* FtpGlob.cc: handle updir errors; handle dir starting with '~'.
	* GetJob.cc, GetJob.h: (NoProtoSrc, NoProtoDst) new methods;
	  handle reverse transfers (put).
	* LocalAccess.cc, LocalAccess.h: preserve home by ignoring Connect();
	  support ascii transfers.
	* Makefile.am: remove mputJob.cc, mputJob.h, PutJob.cc, PutJob.h,
	  FileXfer.cc, FileXfer.h.
	* MirrorJob.cc: don't include PutJob.h.
	* commands.cc: don't include PutJob.h, mputJob.h; move put, mput, mget
	  functionality to cmd_get; update help; use GlobURL;
	  support `login URL'.
	* mgetJob.cc, mgetJob.h: support mput.
	* url.h: (is_url) new method.
	* complete.cc: use GlobURL.
	* FileCopy.cc: don't open session if seek_pos>=size.

1999-12-26  Alexander V. Lukyanov  <lav@yars.free.net>

	* commands.cc: help update; support get -a for ascii mode;
	  don't use ascii mode for zcat and zmore.
	* CopyJob.cc, CopyJob.h: ascii support in CopyJobEnv; add SetDate and
	  SetSize methods.
	* FileCopy.cc, FileCopy.h: init can_seek0; add FileCopyPeerFA::NewGet,
	  NewPut methods.
	* MirrorJob.cc: use CopyJob.
	* commands.cc: use NewPut.
	* url.cc: allocate enough memory for file: urls.

1999-12-25  Alexander V. Lukyanov  <lav@yars.free.net>

	* CatJob.cc, ChangeLog, CopyJob.cc, CopyJob.h, FileAccess.cc,